# iiCTs

Geant4Object/CBCT/: output0.root
Geant4Object/CBCT/data/: 0.root  90.root  Scatter_0.root
Geant4Object/CBCT/include/: DetectorConstruction.hh  DetectorSD.hh  HistoManager.hh  PrimaryGeneratorAction.hh  Run.hh  TrackerHit.hh  (+1 more)
Geant4Object/HelicalCT/: vis.mac
Geant4Object/LinearCT/: CMakeLists.txt
Geant4Object/SpectrumSimulation/: 3converted_source.txt  GammaTherapy.cc
Geant4Object/SpectrumSimulation1/: 2000converted_source.txt  CMakeLists.txt  GammaTherapy.cc  macro_commands.md  mainvis.mac  read  source.txt  vis.mac
Geant4Object/SpectrumSimulation1/include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  PhysicsListMessenger.hh
Geant4Object/SpectrumSimulation1/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  DetectorMaterials.cc  DetectorSD.cc  HistoManager.cc  PhysicsList.cc  Run.cc
Geant4Object/StaticCT_Side/: CMakeLists.txt
Geant4Object/StaticCT_Side/data/: 0.root
Geant4Object/StaticCT_Side/include/: DetectorConstruction.hh  EventAction.hh  HistoManager.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh
Geant4Object/StaticCT_Side/src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  DetectorHit.cc  EmbeddingHelper.cc  EventAction.cc  HistoManager.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  Run.cc
Geant4Object/Txray/: CMakeLists.txt  GammaTherapy.cc  X射线光谱仿真
build-iiCTs-Desktop_Qt_5_14_2_GCC_64bit-Debug/: Makefile  moc_changepasswd.cpp  moc_chatagent.cpp  moc_chatpanel.cpp  moc_commandwriterthread.cpp  moc_embed.cpp  moc_imagecontainer.cpp  moc_imagecontainerwidget.cpp  moc_loginwindow.cpp  moc_mainwindow.cpp  moc_modelctreconstruction.cpp  moc_modelctscansimulation.cpp  moc_modeldetectormodel.cpp  moc_modelhome.cpp  moc_modelspectrumsimulation.cpp  moc_modeltubesimulation.cpp  moc_modeluserguide.cpp  moc_modelversioninformation.cpp  moc_paractreconstruction.cpp  moc_paractscansimulation.cpp  moc_paradetectormodel.cpp  moc_parahome.cpp  moc_paramfilemanager.cpp  moc_paraspectrumsimulation.cpp  moc_paratubesimulation.cpp  moc_parauserguide.cpp  moc_paraversioninformation.cpp  moc_progressmonitor.cpp  moc_registerwindow.cpp  moc_resultctreconstruction.cpp  moc_resultctscansimulation.cpp  moc_resultdetectormodel.cpp  moc_resulthome.cpp  moc_resultspectrumsimulation.cpp  moc_resulttubesimulation.cpp  moc_resultuserguide.cpp  moc_resultversioninformation.cpp  moc_terminalwidget.cpp  moc_transcbct.cpp  moc_transhelicalct.cpp  (+8 more)
iiCTs/: CMakeLists.txt  dist_cmake.sh  dist_qmake.sh  find_gcc_qt.sh  iiCTs.pro  iiCTs.pro.user.a55639d
iiCTs/guide/: CTReconstruction.md  CTScanSimulation.md  DetectorModel.md  Home.md  SpectrumSimulation.md  TubeSimulation.md  guide.qrc
iiCTs/images/: images.qrc
iiCTs/images/CT/: CTISS_log.tif
iiCTs/include/mainui/: changepasswd.h  chatpanel.h  commandwriterthread.h  filedialog.h  loginwindow.h  mainwindow.h  paramfilemanager.h  progressmonitor.h  projectinfo.h  registerwindow.h  roundeditemdelegate.h  userdb.h
iiCTs/include/panel/: modelctreconstruction.h  modelctscansimulation.h  modeldetectormodel.h  modelhome.h  modelspectrumsimulation.h  modeltubesimulation.h  modeluserguide.h  modelversioninformation.h  paractreconstruction.h  paractscansimulation.h  paradetectormodel.h  parahome.h  paraspectrumsimulation.h  paratubesimulation.h  parauserguide.h  paraversioninformation.h  resultctreconstruction.h  resultctscansimulation.h  resultdetectormodel.h  resulthome.h  resultspectrumsimulation.h  resulttubesimulation.h  resultuserguide.h  resultversioninformation.h
iiCTs/include/tgwl/: transcbct.h  transhelicalct.h  translinearct.h  transpolygonintervalct.h  transpolygonsidect.h  transspectrum.h
iiCTs/include/widget/: chatagent.h  embed.h  imagecontainer.h  imagecontainerwidget.h  terminalwidget.h  verticalbutton.h  verticallabel.h
iiCTs/materials/: material1.txt  material2.txt  userMaterial.txt
iiCTs/scripts/: project.jlab
iiCTs/scripts/ct/: dicom2phantom.gwl  helical_default.gwl  linear_static_default.gwl  polygon_interleaved_static_default.gwl  polygon_side_static_default.gwl
iiCTs/scripts/detector/: integrat_arc_default.gwl  integrat_flat_default.gwl  pc_arc_default.gwl  pc_flat_default.gwl
iiCTs/scripts/recon/: recon_default.gwl
iiCTs/scripts/spectrum/: spectrum_hot_default.gwl
iiCTs/scripts/tube/cold/: cold_tube_default.gwl
iiCTs/scripts/tube/hot/: hot_tube_default.gwl
iiCTs/sim_v1/: sim_v1.jlab
iiCTs/sim_v1/ct/: LYLtext_1.gwl
iiCTs/sim_v1/mac/CBCT/: 823cbct.mac  LYLtext_1.mac  LYLtext_1_loop.mac  LYLtext_1_vis.mac  helicalCT1031test.mac
iiCTs/sim_v1/mac/spectrum/: 11_1test_edit.mac  LYLtest_1.mac
iiCTs/sim_v1/spectrum/: 11_1test_edit.gwl  GYtest_1.gwl  LYLtest_1.gwl
iiCTs/source/mainui/: changepasswd.cpp  chatpanel.cpp  commandwriterthread.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  paramfilemanager.cpp  progressmonitor.cpp  registerwindow.cpp  roundeditemdelegate.cpp  userdb.cpp
iiCTs/source/panel/: modelctreconstruction.cpp  modelctscansimulation.cpp  modeldetectormodel.cpp  modelhome.cpp  modelspectrumsimulation.cpp  modeltubesimulation.cpp  modeluserguide.cpp  modelversioninformation.cpp  paractreconstruction.cpp  paractscansimulation.cpp  paradetectormodel.cpp  parahome.cpp  paraspectrumsimulation.cpp  paratubesimulation.cpp  parauserguide.cpp  paraversioninformation.cpp  resultctreconstruction.cpp  resultctscansimulation.cpp  resultdetectormodel.cpp  resulthome.cpp  resultspectrumsimulation.cpp  resulttubesimulation.cpp  resultuserguide.cpp  resultversioninformation.cpp
iiCTs/source/tgwl/: transcbct.cpp  transhelicalct.cpp  translinearct.cpp  transpolygonintervalct.cpp  transpolygonsidect.cpp  transspectrum.cpp
iiCTs/source/widget/: chatagent.cpp  embed.cpp  imagecontainer.cpp  imagecontainerwidget.cpp  terminalwidget.cpp
iiCTs/version/: version.md  version.qrc
sim_v1/: sim_v1.jlab
sim_v1/sim_v1/: sim_v1.jlab
user/sim_v1/: sim_v1.jlab
(+321 files in other folders)
